--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -1,7 +1,23 @@
 <section class="content-header">
   <h1>
     Todos os Restaurantes
+    <a (click)="toggleSearch()"  class="search-link pull-right">
+      <span *ngIf="inputSearch.value"><small></small></span>
+      <i class="fa fa-search" ></i>
+    </a>
   </h1>
+
+  <!-- Barra de Busca -->
+  <div class="row">
+    <div class="col-xs-12 search-bar" [@toggleSearch]="searchBarState">
+      <form [formGroup]="searchForm">
+        <div class="form-group">
+          <input type="text" #inputSearch formControlName="searchControl" class="form-control" placeholder="O que você procura?">
+        </div>
+      </form>
+    </div>
+  </div>
+
 </section>
 
 
