--- a/src/styles.css
+++ b/src/styles.css
@@ -261,3 +261,17 @@ body {
 .has-error-block {
   color: #dd4b39;
 }
+
+/* Barra de Busca de Restaurantes */
+.search-link {
+  cursor: pointer;
+  color: #555;
+}
+.search-link:hover {
+  color: #dd4b39;
+}
+
+.search-bar {
+  opacity: 0;
+  max-height: 0px;
+}
